--- a/fr v2/Happiwork.html
+++ b/fr v2/Happiwork.html
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -71,95 +53,89 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
 <div class="content">
-	<section id="beginning">
-		<p>
-			Bas&eacute;e sur une id&eacute;e originale de Gretchen Rubin et son livre <strong>"The Happiness Project"</strong>, j'ai d&eacute;cid&eacute; de cr&eacute;er mon propre projet.	
-		</p>
-		<p>
-			Pendant <strong>1 an</strong> &agrave; partir d'ao&ucirc;t 2013, j'essayerai, &eacute;tape par &eacute;tape, non pas de changer ma vie mais <strong>d'&ecirc;tre plus heureux au travail</strong>.	
-		</p>
-		<p>
-			A travers mes lectures, mes rencontres et mon analyse de ma vie au travail, je proposerai, <strong>chaque mois, mes id&eacute;es</strong> pour &ecirc;tre plus &eacute;panoui.
-		</p>
+	<section id="beginning" name="beginning">
+		<article>
+			<p>
+				Bas&eacute;e sur une id&eacute;e originale de Gretchen Rubin et son livre <strong>"The Happiness Project"</strong>, j'ai d&eacute;cid&eacute; de cr&eacute;er mon propre projet.	
+			</p>
+			<p>
+				Pendant <strong>1 an</strong> &agrave; partir d'ao&ucirc;t 2013, j'essayerai, &eacute;tape par &eacute;tape, non pas de changer ma vie mais <strong>d'&ecirc;tre plus heureux au travail</strong>.	
+			</p>
+			<p>
+				A travers mes lectures, mes rencontres et mon analyse de ma vie au travail, je proposerai, <strong>chaque mois, mes id&eacute;es</strong> pour &ecirc;tre plus &eacute;panoui.
+			</p>
+		</article>
 		<li>
 			<h2>Introduction</h2>
-			<article>
-				<p>
-					Commencez l'aventure <a href="http://ehalter.com/HPlan/fr/">ici</a>
-				</p>
-			</article>
+			<p>
+				Commencez l'aventure <a href="http://ehalter.com/HPlan/fr/">ici</a>
+			</p>
 		</li>
 	</section>
 	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
+	<section id="calendar" name="calendar">
 		<ol>
 			<li>
-				<h2>Août</h2>
-				<article>
-				</article>	
+				<h2>Août</h2>	
 			</li>
 			<li>
-					<h2>Septembre</h2>
-					<article>
-					</article>
+				<h2>Septembre</h2>
 			</li>
 			<li>
-					<h2>Octobre</h2>
-					<article>
-					</article>
+				<h2>Octobre</h2>
 			</li>
 			<li>
-					<h2>Novembre</h2>
-					<article>
-					</article>
+				<h2>Novembre</h2>
 			</li>
 			<li>
-					<h2>Décembre</h2>
-					<article>
-					</article>
+				<h2>Décembre</h2>
 			</li>
 			<li>
-					<h2>Janvier</h2>
-					<article>
-					</article>
+				<h2>Janvier</h2>
 			</li>
 			<li>
-					<h2>Février</h2>
-					<article>
-					</article>
+				<h2>Février</h2>
 			</li>
 			<li>
-					<h2>Mars</h2>
-					<article>
-					</article>
+				<h2>Mars</h2>
 			</li>
 			<li>
-					<h2>Avril</h2>
-					<article>
-					</article>
+				<h2>Avril</h2>
 			</li>
 			<li>
-					<h2>Mai</h2>
-					<article>
-					</article>
+				<h2>Mai</h2>
 			</li>
 			<li>
-					<h2>Juin</h2>
-					<article>
-					</article>
+				<h2>Juin</h2>
 			</li>
 			<li>
-					<h2>Juillet</h2>
-					<article>
-					</article>
+				<h2>Juillet</h2>
 			</li>
 		</ol>
 	</section>
 	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
+	<section id="aftermatch" name="aftermatch">
 		<li>
 			<h2>Bilan</h2>
 			<article>
