--- a/fr v2/amis.html
+++ b/fr v2/amis.html
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -71,13 +53,31 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
-<div class="content">
+<aside name="friends">
 	<h1>Amis</h1>
-	<h3>Parceque tout le monde a besoin d'un r&eacute;seau</h3>
+	<h2>Parceque tout le monde a besoin d'un r&eacute;seau</h2>
 	<p>Int&eacute;ress&eacute;s pour &eacute;changer avec des gens passionn&eacute;s ? Choississez votre domaine !</p>
-	<h2>D&eacute;veloppement web &amp; Mobile</h2>
+	<h3>D&eacute;veloppement web &amp; Mobile</h3>
 	<ul>
 		<li>
 			<a href="http://adrian.gaudebert.fr/">Adrian Gaudebert</a> - Passionn&eacute; de d&eacute;veloppement web
@@ -86,19 +86,19 @@
 			<a href="http://axel.royerb.com/">Axel Royer</a> - D&eacute;veloppeur d'application mobile
 		</li>
 	</ul>
-	<h2>Illustration Graphique</h2>
+	<h3>Illustration Graphique</h3>
 	<ul>
 		<li>
 			<a href="http://www.titipops.fr/">Alita Bernachot</a> - Cr&eacute;atrice, Dessinatrice et d&egrave;veloppeuse web
 		</li>
 	</ul>
-	<h2>Sport</h2>
+	<h3>Sport</h3>
 	<ul>
 		<li>
 			<a href="http://www.besoin2sport.com/">Matthieu Verneret</a> - Karatéka et coach sportif
 		</li>
 	<ul>
-	<h2>Recrutement</h2>
+	<h3>Recrutement</h3>
 	<ul>	
 		<li>
 			<a href="http://www.jordico.com/">Daniel Jordi</a> - Recruteur et coach en recherche de travail
@@ -107,13 +107,13 @@
 			<a href="http://careercake.com/">Aimee Bateman</a> - Recruteur, entrepreneur et coach en carri&egrave;re
 		</li>
 	</ul>
-	<h2>Photographie</h2>
+	<h3>Photographie</h3>
 	<ul>	
 		<li>
 			<a href="">Pauline Darley</a> - Capturer vos id&eacute;es en photos
 		</li>
 	</ul>
-</div>
+</aside>
 <footer>
 		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
