--- a/fr v2/histoire.html
+++ b/fr v2/histoire.html
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -71,27 +53,45 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
-<div class="content">
+<section name="history">
 	<article>
-	<h1>Opération Storylight</h1>
-	<p>L'ennemi a envoyé des espions dans le passé pour changer le cours du conflit et plus encore. Vous devez <strong>absolument les neutraliser</strong>.<p>
-	<p>Par conséquent, demain vous sauterez sur <strong>l'Histoire</strong>. Vous serez en terres inconnues entourés d'anciens peuples et espèces. Soyez prudent.
-	Heureusement, les Hommes sous vos ordres sont des experts. Ils sont biens entrainés, curieux et n'ont qu'un rêve : la connaissance. </p>
-	<p>Vous retrouverez les détails de l'opération en <strong>consultant le dossier sur votre table de briefing.</strong></p>
-	<p>Bonne chance Commandant !</p>
+		<h1>Opération Storylight</h1>
+		<p>L'ennemi a envoyé des espions dans le passé pour changer le cours du conflit et plus encore. Vous devez <strong>absolument les neutraliser</strong>.<p>
+		<p>Par conséquent, demain vous sauterez sur <strong>l'Histoire</strong>. Vous serez en terres inconnues entourés d'anciens peuples et espèces. Soyez prudent.
+		Heureusement, les Hommes sous vos ordres sont des experts. Ils sont biens entrainés, curieux et n'ont qu'un rêve : la connaissance. </p>
+		<p>Vous retrouverez les détails de l'opération en <strong>consultant le dossier sur votre table de briefing.</strong></p>
+		<p>Bonne chance Commandant !</p>
 	</article>
 	<map name="mbriefing">
-		<img id="history" src="images/ww2/history.png"/>
+		<img id="map" name="map" src="images/ww2/history.png"/>
 		<a href="#">
-			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png" onmouseover="this.src='images/ww2/sfiles_test.png'" onmouseout="this.src='images/ww2/sfiles.png'" /> 
+			<img id="sfiles" name="sfiles" alt="sfiles" src="images/ww2/sfiles.png" onmouseover="this.src='images/ww2/sfiles_test.png'" onmouseout="this.src='images/ww2/sfiles.png'" /> 
 		</a>
 		<a target="_blank" href="http://www.39-45.org/portailv2/news/news.php">
-			<img id="boussole" alt="boussole" src="images/ww2/boussole.png"/>
+			<img id="boussole" name="boussole" alt="boussole" src="images/ww2/boussole.png"/>
 		</a>
 	</map>
-</div>
+</section>
 <footer>
 		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
