--- a/fr v2/missions.html
+++ b/fr v2/missions.html
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -71,24 +53,42 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
 <div class="content">
-	<section id="pro">
+	<section id="pro" name="pro">
 		<h1>Mission actuelle</h1>
 		<article>
-			<h2>Participation à ....</h2>
-			<p>x mois pour y </p>
+			<h2>Développement web</h2>
+			<p>Travail bénévole</p>
 			<p>Activités principales : </p>
 			<ul>
-				<li>tâche 1</li>
-				<li>tâche 1</li>
-				<li>tâche 1</li>
-				<li>tâche 1</li>
+				<li>Mise à niveau de mon site pour les appareils mobiles</li>
+				<li>Développement d'un morpion en application mobile</li>
+				<li>Développer mes compétences web</li>
+				<li>Utilisation d'HTML5 / CSS3 / JavaScript</li>		
 			</ul>
 		</article>
 	</section>
-	<section id="personal">
+	<section id="personal" name="personal">
 		<h1>Mission annexe</h1>
 		<article>
 			<h2>SI & Projet : Quelles priorit&eacute;s ?</h2>
