--- a/fr v2/mlégales.html
+++ b/fr v2/mlégales.html
@@ -9,7 +9,7 @@
 		<title>
 			  Mentions L&eacute;gales | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/apropos.css">
+		<link rel="stylesheet" type="text/css" href="css/mlégales.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -71,9 +53,27 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
-<div class="content">
+<aside name="mlegales">
 	<h1>Mentions L&eacute;gales</h1>
 	<p>Site con&ccedil;u et r&eacute;alis&eacute; par <strong>Emmmanuel HALTER</strong></p>
 	<p>Les droits du site dans le menu du bas sont partag&eacute;s gr&acirc;ce &agrave; l'id&eacute;e originale de 
@@ -101,7 +101,7 @@
 		Les couleurs du site sont le reflet de certains principes qui font partie de ma vie :<br>
 		le <strong id="bleu">bleu</strong> pour <strong id="bleu">l'ouverture d'esprit</strong> et <strong id="bleu">l'honn&ecirc;tet&eacute;</strong>, <strong id="orange">l'orange</strong> pour <strong id="orange">l'&eacute;change</strong> et le <strong id="jaune">jaune</strong> pour <strong id="jaune">la joie de vivre !</strong>
 	</p>
-</div>
+</aside>
 <footer>
 		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
