--- a/fr v2/sport.html
+++ b/fr v2/sport.html
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -46,7 +28,7 @@
 				<ul>
 					<li><a href="http://ehalter.com/cv.html">CV</a></li>
 					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/expériences.html">Expériences</a><li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
 					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
 				</ul>
 			</li>
@@ -71,10 +53,28 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
-<div class="content">
-	<h1>Sports</h1>
+<section name="sport">
+	<h1>Sport</h1>
 	<article>
 		<p>
 			<strong>Le contr&ocirc;le de soi</strong>, le d&eacute;passement, <strong>le respect de l'autre</strong>, la d&eacute;termination et <strong>l'&eacute;quilibre physique</strong> sont des valeurs qui font que le sport prend une place particuli&egrave;re dans ma vie. 
@@ -89,7 +89,7 @@
 		<source src="test/test.mp4" type='video/mp4'>
 	</video> 
 	<img alt="olympisme" src="images/test.png">
-</div>
+</section>
 <footer>
 		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
