--- a/fr v2/apropos.html
+++ b/fr v2/apropos.html
@@ -18,24 +18,6 @@
 	<a title="Accueil" href="http://ehalter.com">
 				<img alt="Emmanuel Halter" src="images/title.png"/>
 	</a>
-	<div>
-		<div name="quote">
-			<blockquote>
-				<h1>
-					<span class='message'></span>
-				</h1>
-			</blockquote>
-			<h2 class="source"></h2>			
-		</div>
-		<aside>
-			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
-				<img alt="fr" src="icon/flag_fr.jpg"/>
-			</a>
-			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
-				<img alt="en" src="icon/flag_en.jpg"/>
-			</a>
-		</aside>
-	</div>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -71,10 +53,28 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
+	<div>
+		<div name="quote">
+			<blockquote>
+				<h1>
+					<span class='message'></span>
+				</h1>
+			</blockquote>
+			<h2 class="source"></h2>			
+		</div>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
 <div class="content">
-	<h1>Mentions L&eacute;gales</h1>
+	<h1>Mentions l&eacute;gales</h1>
 	<p>Site con&ccedil;u et r&eacute;alis&eacute; par <strong>Emmmanuel HALTER</strong></p>
 	<p>Les droits du site dans le menu du bas sont partag&eacute;s gr&acirc;ce &agrave; l'id&eacute;e originale de 
 		<a href="http://copyheart.org/">Copyheart</a>
