--- a/fr v2/futur.html
+++ b/fr v2/futur.html
@@ -15,11 +15,47 @@
 </head>
 <body>
 <header>
-	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
-			<img alt="Emmanuel Halter" src="images/title.png"/>
-		</a>
-		<div>
+	<a title="Accueil" href="http://ehalter.com">
+				<img alt="Emmanuel Halter" src="images/title.png"/>
+	</a>
+	<nav>
+		<ul name="menu">
+			<li>
+				<a href="http://ehalter.com">Accueil</a>
+			</li>
+			<li>
+				<a href="#">Profil</a>
+				<ul>
+					<li><a href="http://ehalter.com/cv.html">CV</a></li>
+					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
+					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">Intérêts</a>
+				<ul>
+					<li><a href="http://ehalter.com/histoire.html">Histoire</a></li>
+					<li><a href="http://ehalter.com/voyage.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/sport.html">Sport</a></li>
+					<li><a href="http://ehalter.com/recrutement.html">Recrutement</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">Projets</a>
+				<ul>
+					<li><a href="http://ehalter.com/missions.html">Missions</a></li>
+					<li><a href="http://ehalter.com/happiwork.html">HappiWork Plan</a></li>
+					<li><a href="http://ehalter.com/futurs.html">Futurs</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="http://ehalter.com/contact.html">Contact</a>
+			</li>
+		</ul>
+	</nav>
+	<div>
+		<div name="quote">
 			<blockquote>
 				<h1>
 					<span class='message'></span>
@@ -27,65 +63,29 @@
 			</blockquote>
 			<h2 class="source"></h2>			
 		</div>
-	</section>
-	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/profil.html">
-			<img alt="fr" src="icon/flag_fr.png"/>
-		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/profile.html">
-			<img alt="en" src="icon/flag_en.png"/>
-		</a>
-	</section>
-	<nav>
-		<ul id="menu">
-			<li>
-				<a href="http://ehalter.com">Accueil</a>
-			</li>
-			<li>
-				<a href="http://ehalter.com/profil.html">Profil</a>
-				<ul>
-					<li><a href="http://ehalter.com/interets.html">CV</a></li>
-					<li><a href="http://ehalter.com/interets.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
-					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="http://ehalter.com/interets.html">Intérêts</a>
-				<ul>
-					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
-					<li><a href="http://ehalter.com/interets.html">Sport</a></li>
-					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="http://ehalter.com/projets.html">Projets</a>
-				<ul>
-					<li><a href="http://ehalter.com/interets.html">Mission</a></li>
-					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
-					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="http://ehalter.com/contact.html">Contact</a>
-			</li>
-		</ul>
-	</nav>	
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>		
 </header>
-<div class="content">
+<section name="futur">
 	<h1>Projets futurs</h1>
 	<article>
-		<p>Bien que junior sur le marché du travail, j'ai déjà une bonne idée dans la voie sur laquelle je veux m'orienter à moyen terme (&asymp; 4 ans).</p>
+		<p>Bien que junior sur le marché du travail, j'ai déjà une idée dans la voie sur laquelle je veux m'orienter à moyen terme (&asymp; 4 ans).</p>
 		<p>Evidemment je ne peux savoir ce que me réserve l'avenir (peut-être serais-je historien dans 5 ans!) mais voici les deux axes que j'aimerai développer.</p>
 	</article>
-	<section>
+	<div>
 		<img alt="Business Analyste" src="images/banalyst.png"/>
 		<img alt="A l'étranger" src="images/abroad.png"/>
-	</section>
-</div>
+	</div>
+</section>
 <footer>
-		<section id="footerbox-network">
+		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
@@ -97,7 +97,7 @@
 					<span id="connect-skype" class="sbconnecticon"></span>
 				</a>
 		</section>	
-		<section id="footerbox-about">
+		<section name="about">
 			<h1>A propos</h1>
 			<p>
 				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
