--- a/fr v2/index_bis.html
+++ b/fr v2/index_bis.html
@@ -9,7 +9,11 @@
 		<title>
 			  Accueil | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/accueil_bis.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1025px) and (max-width: 1799px)" href="css/default/accueil_bis.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/accueil_bis.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/accueil_bis.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 481px) and (max-width: 768px)" href="css/mobile_bis/accueil_bis.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="css/mobile/accueil_bis.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -120,9 +124,9 @@
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
-			<p>
+			<small>
 				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
-			</p>
+			</small>
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
