--- a/fr v2/voyage.html
+++ b/fr v2/voyage.html
@@ -10,7 +10,11 @@
 		<title>
 			  Voyage | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/voyage.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/voyage.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/voyage.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/voyage.css">
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/voyage.css">
+		
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -114,9 +118,9 @@
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
-			<p>
+			<small>
 				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
-			</p>
+			</small>
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
@@ -138,7 +142,7 @@
 		Pour répondre au besoin régulier de son client, elle propose une nouvelle destination <strong>tous les 3 mois</strong>. Sa <strong>formule voyage</strong> de prédilection est de <strong>3 à 4</strong> jours.
 	</p>
 	<p>	
-		Son slogan résume bien l'état d'esprit de la compagnie : <strong>"Qu'elle soit proche ou lointaine, l'aventure commence au pied de notre lit"</strong>
+		Son slogan résume bien l'état d'esprit de la compagnie : <strong>"Qu'elle soit proche ou lointaine, l'aventure commence au pied de votre lit"</strong>
 	</p>
 	<a class="close-reveal-modal">&#215;</a>
 </div>
