--- a/fr v2/apports.html
+++ b/fr v2/apports.html
@@ -9,7 +9,11 @@
 		<title>
 			  Apports | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/apports.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/apports.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/apports.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/apports.css">
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/apports.css">
+		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -98,9 +102,9 @@
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
-			<p>
+			<small>
 				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
-			</p>
+			</small>
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
