--- a/fr v2/contact.html
+++ b/fr v2/contact.html
@@ -10,7 +10,12 @@
 			  Contact | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="js/validationEngine/css/validationEngine.jquery.css"/>
-		<link rel="stylesheet" type="text/css" href="css/contact.css">
+		
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/contact.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/contact.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/contact.css">
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/contact.css">
+		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -174,9 +179,9 @@
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
-			<p>
+			<small>
 				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
-			</p>
+			</small>
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
