--- a/fr v2/expériences.html
+++ b/fr v2/expériences.html
@@ -9,7 +9,11 @@
 		<title>
 			  Expériences | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/experiences.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/experiences.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/experiences.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/experiences.css">
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/missions.css">
+		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -142,9 +146,9 @@
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
-			<p>
+			<small>
 				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
-			</p>
+			</small>
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
